--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "@testing-library/react": "^14.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jsdom": "^27.2.0",
     "typescript": "^5.4.0",
     "vite": "^5.2.0",
     "vitest": "^1.5.0"
